--- a/web/views/player.ejs
+++ b/web/views/player.ejs
@@ -51,17 +51,17 @@
         <section class="column">
             <div class="user-profile">
                 <div class="avatar-placeholder">
-                   <img src="<%= user.avatarUrl %>" alt="<%= user.username %>'s Avatar" onerror="this.src='https://placehold.co/120x120/e0e6f0/5f6c7b?text=Error';">
+                   <img src="<%= player.avatarUrl %>" alt="<%= player.username %>'s Avatar" onerror="this.src='https://placehold.co/120x120/e0e6f0/5f6c7b?text=Error';">
                 </div>
-                <h2 class="username"><%= user.username %></h2>
+                <h2 class="username"><%= player.username %></h2>
             </div>
             <div class="data-card">
                 <p class="card-label">Group Rank</p>
-                <p class="card-content"><%= user.groupRank %></p>
+                <p class="card-content"><%= player.groupRank %></p>
             </div>
             <div class="data-card">
                 <p class="card-label">Notes</p>
-                <p class="card-content"><%= user.notes || 'No notes available.' %></p>
+                <p class="card-content"><%= player.notes || 'No notes available.' %></p>
             </div>
         </section>
 
